--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ body {
     --color3: hsla(200, 61%, 56%, 1);
     --color4: hsla(187, 41%, 94%, 1);
     --color5: hsla(170, 28%, 95%, 1); */
-/* 
+
     /* --color1: hsla(45, 86%, 83%, 1);
     --color2: hsla(135, 65%, 98%, 1);
     --color3: hsla(315, 37%, 86%, 1);
@@ -19,8 +19,8 @@ body {
     --footer-height: 25px;
     
     font-family: 'Titillium Web', sans-serif;
-    background-color: var(--color2);
-}
+    background-color: var(--color2); 
+} 
 
 main {
     display: flex;
@@ -30,7 +30,32 @@ main {
     margin-bottom: calc(var(--footer-height));
 }
 
-section {
+
+/*.calculation{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    padding: 10px;
+    grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr;
+    background: lightblue;
+}*/
+
+section{
+    width: 350px;
+}
+
+.wrapper{
+    display: grid;
+    margin: auto;
+    padding: 10px;
+    text-align: center;
+    grid-template-columns: 20% 10% 20% 20% 10% 1fr;
+    background: lightblue;
+}
+
+
+/* section {
     background-color: var(--color5);
     width: 1000px;
     max-width: 80%;
@@ -44,7 +69,7 @@ section {
     margin-bottom: var(--gutter);
     border: solid 2px var(--color1);
 }
-
+*/
 header {
     display: flex;
     justify-content: flex-end;
